--- a/app/index.html
+++ b/app/index.html
@@ -10,16 +10,49 @@
 	<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
+		<![endif]-->
 	<!--[if lt IE 10]>
 		<link rel="stylesheet" href="css/ie.css">
-	<![endif]-->
-</head>
-<body>
-	
+		<![endif]-->
+	</head>
+	<body>
+		<header class="header">
+			<div class="container">
+				<div class="header__top clearfix">
+					<ul class="reg">
+						<li class="reg__item">
+							<a href="#" class="reg__link btn">Log In</a>
+						</li>
+						<li class="reg__item">
+							<a href="#" class="reg__link reg__link--right btn">Sign Up</a>
+						</li>
+					</ul>
+					<a href="#!" class="header__top-logo">URLAUBSGLÜCK</a>
+				</div><!-- end header__top -->
+				<h1 class="header__title">Share your holiday dreams</h1>
+				<p class="header__subtitle">And find the perfect partner to fullfill it</p>
+				<a href="#!" class="header__btn btn btn--large">Find your holiday partner</a>
+			</div><!-- end container -->
+		</header>
 
+		<section class="works">
+			<div class="container">
+				<h2 class="section-title">How Urlaubsglück works?</h2>
+				<div class="works__wrap clearfix">
+					<div class="works__item">
+						1
+					</div><!-- end works__item one-->
+					<div class="works__item">
+						2
+					</div><!-- end works__item one-->
+					<div class="works__item works__item--last">
+						3
+					</div><!-- end works__item one-->
+				</div><!-- end works__wrap -->
+			</div><!-- end container -->
+		</section>
 
-	<script src="js/libs.min.js"></script>
-	<script src="js/common.js"></script>
-</body>
-</html>
+		<script src="js/libs.min.js"></script>
+		<script src="js/common.js"></script>
+	</body>
+	</html>
