Added section partners

--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,47 @@
 			</div><!-- end container -->
 		</section>
 
+		<section class="partners">
+			<div class="container">
+				<h2 class="section-title section-title--partners">Meet a partner for your best holiday</h2>
+				<div class="partners__wrap clearfix">
+					<div class="partners__item">
+						<div class="partners__img-wrap">
+							<img src="img/bradley.png" alt="" class="partners__img">
+							<span class="partners__icon icon-tv"></span>
+						</div><!-- end partners__img-wrap -->
+						<h4 class="partners__title">Bradley Hunter</h4>
+						<p class="partners__description">Based in Chicago. I love playing tennis and loud music.</p>
+					</div><!-- end partners__item ONE -->
+					<div class="partners__item">
+						<div class="partners__img-wrap">
+							<img src="img/heather.png" alt="" class="partners__img">
+							<span class="partners__icon icon-cup"></span>
+						</div><!-- end partners__img-wrap -->
+						<h4 class="partners__title">Heather Walker</h4>
+						<p class="partners__description">I'm a happy person that loves cats and climbing on mountains.</p>
+					</div><!-- end partners__item TWO -->
+					<div class="partners__item">
+						<div class="partners__img-wrap">
+							<img src="img/lukas.png" alt="" class="partners__img">
+							<span class="partners__icon icon-flask"></span>
+						</div><!-- end partners__img-wrap -->
+						<h4 class="partners__title">Lukas Marsha</h4>
+						<p class="partners__description">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
+					</div><!-- end partners__item THREE -->
+					<div class="partners__item partners__item--last">
+						<div class="partners__img-wrap">
+							<img src="img/hunter.png" alt="" class="partners__img">
+							<span class="partners__icon icon-plane"></span>
+						</div><!-- end partners__img-wrap -->
+						<h4 class="partners__title">Bradley Hunter</h4>
+						<p class="partners__description">Based in Chicago. I love playing tennis and loud music.</p>
+					</div><!-- end partners__item FOUR -->
+				</div><!-- end partners__wrap -->
+				<a href="#!" class="btn btn--large btn--large--stroke">See other partners</a>
+			</div><!-- end container -->
+		</section>
+
 		<script src="js/libs.min.js"></script>
 		<script src="js/common.js"></script>
 	</body>
