Added search and footer

--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
 				<div class="partners__wrap clearfix">
 					<div class="partners__item">
 						<div class="partners__img-wrap">
-							<img src="img/bradley.png" alt="" class="partners__img">
+							<img src="img/bradley.jpg" alt="" class="partners__img">
 							<span class="partners__icon icon-tv"></span>
 						</div><!-- end partners__img-wrap -->
 						<h4 class="partners__title">Bradley Hunter</h4>
@@ -66,7 +66,7 @@
 					</div><!-- end partners__item ONE -->
 					<div class="partners__item">
 						<div class="partners__img-wrap">
-							<img src="img/heather.png" alt="" class="partners__img">
+							<img src="img/heather.jpg" alt="" class="partners__img">
 							<span class="partners__icon icon-cup"></span>
 						</div><!-- end partners__img-wrap -->
 						<h4 class="partners__title">Heather Walker</h4>
@@ -74,7 +74,7 @@
 					</div><!-- end partners__item TWO -->
 					<div class="partners__item">
 						<div class="partners__img-wrap">
-							<img src="img/lukas.png" alt="" class="partners__img">
+							<img src="img/lucas.jpg" alt="" class="partners__img">
 							<span class="partners__icon icon-flask"></span>
 						</div><!-- end partners__img-wrap -->
 						<h4 class="partners__title">Lukas Marsha</h4>
@@ -82,7 +82,7 @@
 					</div><!-- end partners__item THREE -->
 					<div class="partners__item partners__item--last">
 						<div class="partners__img-wrap">
-							<img src="img/hunter.png" alt="" class="partners__img">
+							<img src="img/hunter.jpg" alt="" class="partners__img">
 							<span class="partners__icon icon-plane"></span>
 						</div><!-- end partners__img-wrap -->
 						<h4 class="partners__title">Bradley Hunter</h4>
@@ -92,6 +92,53 @@
 				<a href="#!" class="btn btn--large btn--large--stroke">See other partners</a>
 			</div><!-- end container -->
 		</section>
+
+		<section class="ideas">
+			<div class="container">
+				<h2 class="section-title section-title--ideas">Discover holiday activity ideas</h2>
+				<div class="ideas__wrap">
+					<div class="ideas__item">1</div>
+				</div><!-- end ideas__wrap -->
+			</div><!-- end container -->
+		</section>
+
+		<section class="search">
+			<div class="container">
+				<h2 class="section-title section-title--search">Discover holiday activity ideas</h2>
+				<p class="search__paragraph">Hi! What are your holiday interests?</p>
+				<input class="search__input-text" type="text" id="img_tag" placeholder="Enter your interests">
+				<input class="btn btn--large btn--large-input" type="button" value="Search partners" id="btn_search">
+			</div><!-- end container -->
+		</section>
+
+		<footer class="footer">
+			<div class="container container--footer clearfix">
+				<a class="footer__logo" href="#1">URLAUBSGLÜCK</a>
+				<div class="footer-menu">
+					<h4 class="footer-menu__title">Company</h4>
+					<ul class="footer-menu__list">
+						<li class="footer-menu__item">
+							<a class="footer-menu__link" href="#!">About</a>
+						</li>
+						<li class="footer-menu__item">
+							<a class="footer-menu__link" href="#!">Contacts</a>
+						</li>
+						<li class="footer-menu__item">
+							<a class="footer-menu__link" href="#!">Press</a>
+						</li>
+						<li class="footer-menu__item">
+							<a class="footer-menu__link" href="#!">Blog</a>
+						</li>
+					</ul>
+				</div><!-- end footer__menu -->
+				<h4 class="footer-menu__title footer-menu__title--second">Partners</h4>
+				<div class="footer__copy">
+					<span class="footer__copy-title">Designed by</span>
+					<a class="footer__copy-logo" href="#!"><img src="img/logo.png" alt=""></a>
+				</div>
+			</div><!-- end container -->
+		</footer>
+
 
 		<script src="js/libs.min.js"></script>
 		<script src="js/common.js"></script>
