Added native js sliders

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 	<!--[if lt IE 10]>
-		<link rel="stylesheet" href="css/ie.css">
+		<link rel="stylesheet" href="ie.css">
 		<![endif]-->
 	</head>
 	<body>
@@ -39,15 +39,91 @@
 			<div class="container">
 				<h2 class="section-title">How Urlaubsglück works?</h2>
 				<div class="works__wrap clearfix">
-					<div class="works__item">
-						1
-					</div><!-- end works__item one-->
-					<div class="works__item">
-						2
-					</div><!-- end works__item one-->
-					<div class="works__item works__item--last">
-						3
-					</div><!-- end works__item one-->
+				<!-- first slider-->
+					<div class="works__slider" id="slidr-first">
+						<div data-slidr="one" class="works__slider-item">
+							<div class="works__slider-img item-img-1"></div>
+							<div class="works__slider-description">
+								<span class="works__slider-description__btn btn btn--mini">Step 1</span>
+								<h2 class="works__slider-description__title">Sed leo enim, condimentum</h2>
+								<p class="works__slider-description__paragraph">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+							</div><!-- end works__slider-description -->
+						</div><!-- end works__slider-item ONE-SLIDE-->
+						<div data-slidr="two" class="works__slider-item">
+							<div class="works__slider-img item-img-2"></div>
+							<div class="works__slider-description">
+								<span class="works__slider-description__btn btn btn--mini">Step 2</span>
+								<h2 class="works__slider-description__title">Morbi velit risus</h2>
+								<p class="works__slider-description__paragraph">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
+							</div><!-- end works__slider-description -->
+						</div><!-- end works__slider-item TWO-SLIDE -->
+						<div data-slidr="three" class="works__slider-item">
+							<div class="works__slider-img item-img-3"></div>
+							<div class="works__slider-description">
+								<span class="works__slider-description__btn btn btn--mini">Step 3</span>
+								<h2 class="works__slider-description__title">Sed leo enim, condimentum</h2>
+								<p class="works__slider-description__paragraph">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+							</div><!-- end works__slider-description -->
+						</div><!-- end works__slider-item THREE-SLIDE -->
+					</div><!-- end works__slider ONE-->
+
+				<!-- second slider-->
+					<div class="works__slider" id="slidr-second">
+						<div data-slidr="one" class="works__slider-item">
+							<div class="works__slider-img item-img-2"></div>
+							<div class="works__slider-description">
+								<span class="works__slider-description__btn btn btn--mini">Step 2</span>
+								<h2 class="works__slider-description__title">Morbi velit risus</h2>
+								<p class="works__slider-description__paragraph">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
+							</div><!-- end works__slider-description -->
+						</div><!-- end works__slider-item TWO-SLIDE -->
+						<div data-slidr="two" class="works__slider-item">
+							<div class="works__slider-img item-img-3"></div>
+							<div class="works__slider-description">
+								<span class="works__slider-description__btn btn btn--mini">Step 3</span>
+								<h2 class="works__slider-description__title">Sed leo enim, condimentum</h2>
+								<p class="works__slider-description__paragraph">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+							</div><!-- end works__slider-description -->
+						</div><!-- end works__slider-item THREE-SLIDE -->
+						<div data-slidr="three" class="works__slider-item">
+							<div class="works__slider-img item-img-1"></div>
+							<div class="works__slider-description">
+								<span class="works__slider-description__btn btn btn--mini">Step 1</span>
+								<h2 class="works__slider-description__title">Sed leo enim, condimentum</h2>
+								<p class="works__slider-description__paragraph">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+							</div><!-- end works__slider-description -->
+						</div><!-- end works__slider-item ONE-SLIDE-->
+					</div><!-- end works__slider TWO-->
+
+				<!-- third slider-->
+					<div class="works__slider works__slider--last" id="slidr-third">
+						<div data-slidr="one" class="works__slider-item">
+							<div class="works__slider-img item-img-3"></div>
+							<div class="works__slider-description">
+								<span class="works__slider-description__btn btn btn--mini">Step 3</span>
+								<h2 class="works__slider-description__title">Sed leo enim, condimentum</h2>
+								<p class="works__slider-description__paragraph">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+							</div><!-- end works__slider-description -->
+						</div><!-- end works__slider-item THREE-SLIDE -->
+						<div data-slidr="two" class="works__slider-item">
+							<div class="works__slider-img item-img-1"></div>
+							<div class="works__slider-description">
+								<span class="works__slider-description__btn btn btn--mini">Step 1</span>
+								<h2 class="works__slider-description__title">Sed leo enim, condimentum</h2>
+								<p class="works__slider-description__paragraph">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+							</div><!-- end works__slider-description -->
+						</div><!-- end works__slider-item ONE-SLIDE-->
+						<div data-slidr="three" class="works__slider-item">
+							<div class="works__slider-img item-img-2"></div>
+							<div class="works__slider-description">
+								<span class="works__slider-description__btn btn btn--mini">Step 2</span>
+								<h2 class="works__slider-description__title">Morbi velit risus</h2>
+								<p class="works__slider-description__paragraph">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
+							</div><!-- end works__slider-description -->
+						</div><!-- end works__slider-item TWO-SLIDE -->
+					</div><!-- end works__slider THREE-->
+
+
 				</div><!-- end works__wrap -->
 			</div><!-- end container -->
 		</section>
@@ -140,7 +216,7 @@
 		</footer>
 
 
-		<script src="js/libs.min.js"></script>
+		<script src="js/slidr.min.js"></script>
 		<script src="js/common.js"></script>
 	</body>
 	</html>
