--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
 			<div class="container">
 				<h2 class="section-title">How Urlaubsglück works?</h2>
 				<div class="works__wrap clearfix">
-				<!-- first slider-->
+					<!-- first slider-->
 					<div class="works__slider" id="slidr-first">
 						<div data-slidr="one" class="works__slider-item">
 							<div class="works__slider-img item-img-1"></div>
@@ -67,7 +67,7 @@
 						</div><!-- end works__slider-item THREE-SLIDE -->
 					</div><!-- end works__slider ONE-->
 
-				<!-- second slider-->
+					<!-- second slider-->
 					<div class="works__slider" id="slidr-second">
 						<div data-slidr="one" class="works__slider-item">
 							<div class="works__slider-img item-img-2"></div>
@@ -95,7 +95,7 @@
 						</div><!-- end works__slider-item ONE-SLIDE-->
 					</div><!-- end works__slider TWO-->
 
-				<!-- third slider-->
+					<!-- third slider-->
 					<div class="works__slider works__slider--last" id="slidr-third">
 						<div data-slidr="one" class="works__slider-item">
 							<div class="works__slider-img item-img-3"></div>
@@ -172,9 +172,37 @@
 		<section class="ideas">
 			<div class="container">
 				<h2 class="section-title section-title--ideas">Discover holiday activity ideas</h2>
-				<div class="ideas__wrap">
-					<div class="ideas__item">1</div>
-				</div><!-- end ideas__wrap -->
+				<div class="grid clearfix">
+					<div class="grid__sizer"></div>
+					<div class="grid__item">
+						<img class="grid__item-img" src="img/m1.jpg" alt="">
+						<span class="grid__item-title">Sport and activity</span>
+					</div>
+					<div class="grid__item">
+						<img class="grid__item-img" src="img/m2.jpg" alt="">
+						<span class="grid__item-title">Wellnes and Health</span>
+					</div>
+					<div class="grid__item">
+						<img class="grid__item-img" src="img/m3.jpg" alt="">
+						<span class="grid__item-title">Extreme Sports and Expeditions</span>
+					</div>
+					<div class="grid__item">
+						<img class="grid__item-img" src="img/m4.jpg" alt="">
+						<span class="grid__item-title">Games</span>
+					</div>
+					<div class="grid__item">
+						<img class="grid__item-img" src="img/m5.jpg" alt="">
+						<span class="grid__item-title">Culture and Education</span>
+					</div>
+					<div class="grid__item">
+						<img class="grid__item-img" src="img/m6.jpg" alt="">
+						<span class="grid__item-title">Relaxation</span>
+					</div>
+					<div class="grid__item">
+						<img class="grid__item-img" src="img/m7.jpg" alt="">
+						<span class="grid__item-title">Travelling</span>
+					</div>
+				</div><!-- end grid -->
 			</div><!-- end container -->
 		</section>
 
@@ -217,6 +245,8 @@
 
 
 		<script src="js/slidr.min.js"></script>
+		<script src="js/masonry.pkgd.3.3.2.min.js"></script>
+		<script src="js/imagesloaded.pkgd.3.2.0.min.js"></script>
 		<script src="js/common.js"></script>
 	</body>
 	</html>
