AJAX request with masonry for IE8

--- a/app/index.html
+++ b/app/index.html
@@ -244,9 +244,12 @@
 		</footer>
 
 
-		<script src="js/slidr.min.js"></script>
+<!-- 		<script src="js/slidr.min.js"></script>
 		<script src="js/masonry.pkgd.3.3.2.min.js"></script>
 		<script src="js/imagesloaded.pkgd.3.2.0.min.js"></script>
+		<script src="js/words.js"></script> -->
+
+		<script src="js/libs.min.js"></script>
 		<script src="js/common.js"></script>
 	</body>
 	</html>
